cabal-version:      2.4
name:               movie
version:            0.1.0.0
license:            MIT
copyright:          2022 Poldet Assanangkornchai
maintainer:         poldet.ai@gmail.com
author:             Poldet Assanangkornchai
category:           Movie Backend
extra-source-files:
  LICENSE
  README.md

common base
  build-depends:
    , aeson
    , async
    , base                  >=4.13.0.0 && <=4.18.0.0
    , bytestring
    , conferer
    , conferer-warp
    , containers
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , postgresql-migration
    , postgresql-simple
    , postgresql-typed
    , pretty-simple
    , profunctors
    , relude
    , servant
    , servant-server
    , shower
    , text
    , time
    , warp
    , with-utf8

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Movie.App
    Movie.App.Config
    Movie.App.Database
    Movie.App.Env
    Movie.App.Monad
    Movie.App.Server
    Movie.Movies
    Movie.Print

executable movie-exe
  import:         base
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  movie

test-suite movie-test
  import:             base
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , hspec
    , hspec-discover
    , movie

  build-tool-depends: hspec-discover:hspec-discover
